--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-resources/config.properties
+src/test/resources/config.properties
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
